# src/routes.ts
@@ -1,10 +1,13 @@
 import { eventsRouter } from 'controllers/events'
+import { sessionsRouter } from 'controllers/sessions'
+import { speakersRouter } from 'controllers/speakers'
 import { Router } from 'express'
 import { API_VERSION, TITLE } from 'utils/config'
 
 export const router = Router()
 
 router.get('/', (req, res) => {
+  // #swagger.tags = ['Default']
   const data = {
     name: TITLE,
     version: API_VERSION(),
@@ -14,3 +17,5 @@ router.get('/', (req, res) => {
 })
 
 router.use(eventsRouter)
+router.use(speakersRouter)
+router.use(sessionsRouter)
